aws_template_ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  Environment:
    Type: String
    Description: Environment (qa, prod).
    AllowedValues: [qa, prod]
    ConstraintDescription: Must be a valid environment name
  Owner:
    Type: String
    Description: Owner
    Default: 'max'
Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-00b94673edfccb7ca
Resources:
  SimpleConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]
      KeyName: 30deysdevops
      SecurityGroups:
      - Ref: InstanceSecurityGroup
      InstanceType: t2.micro
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo yum update -y
          sudo amazon-linux-extras install -y docker
          sudo service docker start
          sudo usermod -a -G docker ec2-user
          sudo curl -L "https://github.com/docker/compose/releases/download/1.23.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          sudo chmod +x /usr/local/bin/docker-compose
          curl -sSL https://raw.githubusercontent.com/bitnami/bitnami-docker-jenkins/master/docker-compose.yml > docker-compose.yml
          docker-compose up -d
  MyServerGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones:
        Fn::GetAZs: ''
      LaunchConfigurationName: !Ref SimpleConfig
      MinSize: '1'
      MaxSize: '3'
      Tags:
        - Key: 'Service'
          Value: 'jenkins'
          PropagateAtLaunch: true
        - Key: 'Owner'
          Value: 'max'
          PropagateAtLaunch: true

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 50000
        ToPort: 50000
        CidrIp: 0.0.0.0/0

  NewVolume:
    Type: AWS::EC2::Volume
    Properties:
      Size: 8
      VolumeType: gp2
      AvailabilityZone:
        Fn::GetAtt: [ "EC2Instance", "AvailabilityZone" ]

  MountPoint:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      InstanceId: !Ref Ec2Instance
      VolumeId: !Ref NewVolume
      Device: /dev/sdh

  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
